# mbbs-pyq-app

./: .gitignore  .replit  LICENSE  gemini_parser.py  main.py  ocr_reader.py  pyproject.toml  question_parser.py
backend/: main.py
